--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>test</title>
+    <title>Set Game</title>
   </head>
   <body>
     <div id="app"></div>
